# typetw_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: csb_en.txt  csb_zh.txt  csb_zy.txt  lzc_en.txt  lzc_zh.txt  lzc_zy.txt  poet.json  poet2.json
resources/parser/: parser.py  parser_old.py  poet.json  poet300.json  test.txt
src/: data.rs  game.rs  main.rs  ui.rs
