[package]
name = "typetw"
version = "0.1.3"
edition = "2021"
authors = ["Charles Tsai <chialun100@gmail.com>"]
description = "A terminal-based bopomofo typing gadget"
readme = "README.md"
repository = "https://github.com/soulrrrrr/typetw/"
license = "MIT"
keywords = ["ratatui", "chinese", "bopomofo", "typing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
ratatui = "0.23"
include_dir = "0.7.3"
